--- a/package.json
+++ b/package.json
@@ -2,9 +2,19 @@
   "name": "houser",
   "version": "0.1.0",
   "private": true,
+  "main": "./server/index.js",
+  "proxy": "http://localhost:3501",
   "dependencies": {
+    "axios": "^0.18.0",
+    "body-parser": "^1.18.3",
+    "cors": "^2.8.4",
+    "dotenv": "^6.0.0",
+    "express": "^4.16.3",
+    "express-session": "^1.15.6",
+    "massive": "^5.1.3",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4"
   },
   "scripts": {
